<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:fontFamily="@font/proxima_nova">

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/lightBlack"
        android:padding="32dp"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="32dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >
            <ImageView
                android:id="@id/playerprofilepicbackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:padding="110dp"
                android:background="@drawable/border"
                />

            <ImageView
                android:id="@id/playerprofilepic"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:scaleType="fitCenter"
                android:src="@drawable/no_profile_pic"/>
        </FrameLayout>
        <EditText
            android:id="@+id/edittextusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@color/white"
            android:hint="@string/username"
            android:padding="10dp"
            android:text=""/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_Addplayerpic"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight='3'
                android:padding="16dp"
                android:text="@string/add_player_picture"
                android:textSize="20sp"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/Saveplayerprofile"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight='1'
                android:padding="16dp"
                android:text="@string/save"
                android:textSize="20sp"
                app:cornerRadius="10dp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
